# godot.lib.rpg-character-rs

./: Cargo.toml
src/: avatar.rs  cardinal.rs  character_sprite.rs  directional_sprite.rs  ext.rs  follower.rs  interact.rs  lib.rs  npc.rs  sprite.rs  util.rs  warp.rs
src/avatar/: character_sprite.rs  follower.rs  interact.rs
src/cardinal/: gd_api.rs
src/character_sprite/: animation_resume.rs  rolling_value.rs  sprite_directions.rs
src/directional_sprite/: walk_sprite.rs
src/warp/: scene_warp.rs
