[package]
name = "rpg-character"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = "^0.5"

tracing = "^0.1"

thiserror = "^2.0"

scene-manager = { git = "https://github.com/SignalWalker/godot.lib.scene-manager-rs", optional = true }
futures = { version = "^0.3", optional = true }

[features]
default = ["scene-warp"]
scene-warp = ["dep:scene-manager", "dep:futures"]
